Fixes #363: Add google-java-format automation